[package]
name = "downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["stream"] }
dunce = "1.0.5"
futures-util = "0.3.32"
clap = { version = "4.5.60", features = ["derive"] }
indicatif = "0.18.4"